--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Advancements in sports science, AI, and data-driven performance analytics."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zoon Coming Soon React Template</title>
+    <title>Quantum Sport - Cutting-Edge Sports Technology </title>
 
     <!-- Font Awesome Icon -->
     <link
